<resources>
    <string name="app_name">Cabily Partner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registraion">Registraion</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_signin">Login</string>
    <string name="action_loading">Loading</string>
    <string name="go_offline">Go Offline</string>
    <string name="trip_summary">Trip Summary</string>
    <string name="home">Home</string>
    <string name="dialog_app_exit">Are you sure you want to logout</string>
    <string name="dialog_app_exiting">Are you sure you want to Exit</string>
    <string name="title_activity_driver_alert">Alert</string>
    <string name="bank_account">Bank Account</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_trip_summary">Summary Not Available</string>
    <string name="action_loading_error">Error</string>
    <string name="action_loading_sucess">Success</string>
    <string name="action_loading_cancel">Cancelling</string>
    <string name="action_loading_rating">Rating</string>
    <string name="action_label_forgotpassword">Forgot password ?</string>
    <string name="action_label_forgotpassword_header">Forgot password</string>
    <string name="forgotpassword">Please enter the email address of your account</string>
    <string name="action_label_changepassword">Change Password</string>
    <string name="enteremail">Enter your email address</string>
    <string name="forgotpasswordlink">Send me a password reset link</string>
    <string name="action_label_currentpassword">current password</string>
    <string name="action_label_newassword">new password</string>
    <string name="action_label_confirmnewpassword">confirm new password</string>
    <string name="action_label_signin">SignIn</string>
    <string name="action_label_done">Done</string>
    <string name="lasttrip_label">Last Trip</string>
    <string name="todayearnings_label">Today Earnings</string>
    <string name="todaytips_label">Today Tips</string>
    <string name="lasttrip_emtpy_label">No Trip</string>
    <string name="todayearning_no_online_label">No Online</string>
    <string name="todayearning_no_trips_label">No Trip</string>
    <string name="cabily_driver_alert_lable_accept_Textview">ACCEPT</string>
    <string name="cabily_driver_alet_lable_reject_Textview">DECLINE</string>
    <string name="dialog_go_offline">Are you sure you want to go offline?</string>
    <string name="dialog_go_yes">Yes</string>
    <string name="dialog_go_no">No</string>
    <string name="dialog_gooffline_title">Go Offline</string>
    <string name="dialog_go_on_line">Are you sure you want to go online?</string>
    <string name="alert_tape_toaccept">Tap to accept the ride</string>
    <string name="alert_sorry_label_title">Sorry!</string>
    <string name="alert_label_ok">OK</string>
    <string name="alert_label_content1">We could not accepte your request</string>
    <string name="alert_label_content2">No cabs has been available at your place.Kindly try again after sometime</string>
    <string name="alert_enter_drop_location">Please enter Drop Location</string>
    <string name="alert_nointernet">No Internet Connection</string>
    <string name="alert_servererror">Server Error</string>
    <string name="alert_gpsEnable">Enable GPS to locate your location</string>
    <string name="alert_nocar">Sorry! We do not provide services in your city yet.</string>
    <string name="lablesigningin_Textview">Signing In</string>
    <string name="label_gps_textview">Location Services Disabled Please enable location service</string>
    <string name="action_login_validate">Ratting</string>
    <string name="action_alert_header">Ratting</string>
    <string name="action_alert_invalid_email">Email address is invalid</string>
    <string name="action_alert_invalid_password">Password is invalid</string>
    <string name="action_alert_SigninFaild">Sign In Failed</string>
    <string name="action_alert_multidevicelogin">Sorry</string>
    <string name="action_alert_multideviceloginmsg">Already Loggedin other device </string>
    <string name="action_alert_signinfaildmsg">Invalid username or  password </string>
    <string name="action_alert_unabletocreatemap"> Sorry! unable to create maps </string>
    <string name="action_alert_bank_Username">Username can\'t be empty</string>
    <string name="action_alert_bank_accountno">Accountno can\'t be empty</string>
    <string name="action_alert_bank_address">Address can\'t be empty</string>
    <string name="action_alert_bank_name">Bankname can\'t be empty</string>
    <string name="action_alert_branch_name">Branchname can\'t be empty </string>
    <string name="action_alert_branch_address">BranchAddress can\'t be empty </string>
    <string name="action_alert_bank_ifs_code">Ifsc code can\'t be empty</string>
    <string name="action_alert_bank_routingno">Routingno can\'t be empty</string>
    <string name="action_alert_bankinfo_invails">Invalid Bank Details</string>
    <string name="alertsaved_label_title">Saved successfully</string>
    <string name="drivernotlogged_label_title">Driver not logged in</string>
    <string name="waitfortransaction_label_title">please wait until the transaction in complete</string>
    <string name="cabily_driver_main_lable_signin_Textview">SIGNIN</string>
    <string name="cabily_driver_main_lable_register_Textview">REGISTER</string>
    <string name="cabily_driver_main_lable_tripsummery_Textview">Trip Summery</string>
    <string name="cabily_driver_tip_amount">Your Tip Amount :</string>
    <string name="cabily_wallet_used_label">Wallet used</string>
    <string name="accept_total_bill_txtview">Total Bill:</string>
    <string name="accept_total_paid_bill_txtview">Total Paid:</string>
    <string name="accept_total_completed_txtview">Completed</string>
    <string name="accept_total_paid_txtview">Amount paid</string>
    <string name="accept_total_rides">Rides</string>
    <string name="myprofile_label_firstname">First Name :</string>
    <string name="myprofile_label_lastname">Last Name :</string>
    <string name="myprofile_label_phone">Phone :</string>
    <string name="myprofile_label_email">Email :</string>
    <string name="myprofile_label_company">Company :</string>
    <string name="myprofile_label_address1">Address 1 :</string>
    <string name="myprofile_label_address2">Address 2 :</string>
    <string name="myprofile_label_city">City :</string>
    <string name="myprofile_label_country">Country :</string>
    <string name="myprofile_label_state">State :</string>
    <string name="myprofile_label_postcode">Post code :</string>
    <string name="myprofile_label_save">SAVE</string>
    <string name="myprofile_label_myprofile">My Profile</string>
    <string name="myprofile_label_manditory">*</string>
    <string name="bank_lable_accountholder_name">Enter account holder name</string>
    <string name="bank_lable_accountholder_address">Enter account holder Address</string>
    <string name="bank_lable_account_number">Enter account Number</string>
    <string name="bank_lable_bank_name">Enter Bank name</string>
    <string name="bank_lable_branch_name">Enter branch name</string>
    <string name="bank_lable_branch_address">Enter branchaddress</string>
    <string name="bank_lable_ifsc_code">Enter Ifsc code</string>
    <string name="bank_lable_routing_number">Enter routing number</string>
    <string name="bank_lable_bankdetails">Bank Account</string>
    <string name="paymnet_lable_payment_text">Payment:</string>
    <string name="paymnet_lable_amount_text">Amount :</string>
    <string name="paymnet_lable_receivddate_text">Received Date:</string>
    <string name="payment_statment">Payment Statments</string>
    <string name="payment_details">Payment Details</string>
    <string name="payment_list_ridesid">RideId:</string>
    <string name="payment_no_payments">No Payments Available</string>
    <string name="fetchdatatoast">Unable to fetch data from server</string>
    <string name="tripsummery_details_list">Trip Summery Detail</string>
    <string name="tripsummery_all_list">All</string>
    <string name="tripsummery_onride_list">Onride</string>
    <string name="tripsummery_complete_list">Completed</string>
    <string name="tripsummery_setail_cancel_label">Cancel Ride</string>
    <string name="tripsummery_setail_continue_label">Continue Ride</string>
    <string name="tripsummery_rideid_label">ID :</string>
    <string name="tripsummery_add_Ride_label">Ride</string>
    <string name="tripsummery_add_Payment_label">Payment</string>
    <string name="tripsummery_add_km_label">km</string>
    <string name="tripsummery_add_mins_label">mins</string>
    <string name="tripsummery_waittime_label">wait time</string>
    <string name="tripsummery_timetaken_label">time taken</string>
    <string name="tripsummery_ridedistance_label">ride distance</string>
    <string name="tripsummery_pickup_label">Pick up :</string>
    <string name="tripsummery_cancelreason_label">Why are you cancelling?</string>
    <string name="tripsummery_noreason_label">No Reasons Available</string>
    <string name="confirmdelete">Confirm Cancel</string>
    <string name="surewanttodelete">Are you sure you want cancel the trip?</string>
    <string name="label_yes">YES</string>
    <string name="label_no">NO</string>
    <string name="userinfo_cancel_label">Cancel Trip</string>
    <string name="goonline_label">Go Online</string>
    <string name="arrivedtrip_info_label">Info</string>
    <string name="arrivedtrip_id_label">ID :</string>
    <string name="arrivedtrip_arrivedtriptv_label">Slide to Arrived</string>
    <string name="alert_canceld_label_title">Cancelled</string>
    <string name="alert_tripdetail_label_title">Trip Detail</string>
    <string name="alert_tripdetail_droplocation_label_title">Drop Location</string>
    <string name="alert_tripdetail_select_droplocation_label_title">Select Drop Location</string>
    <string name="alert_tripdetail_droptime_label_title">Drop Time</string>
    <string name="alert_tripdetail_select_droptime_label_title">Select Drop Time</string>
    <string name="alert_tripdetail_waitingtime_label_title">Waiting Time</string>
    <string name="alert_tripdetail_ridedistance_label_title">Ride Distance</string>
    <string name="alert_tripdetail_enterdistance_label_hint">Enter Distance(eg:25)</string>
    <string name="alert_tripdetail_endtrip_label">Slide to End Trip</string>
    <string name="arrived_alert_content1">Unable to contact user.please try again after sometime</string>
    <string name="voice_navigationlabel">Start navigation</string>
    <string name="bepatient">This process may take few seconds.so,please be patient.</string>
    <string name="PaymentRequest">Your payment request is send to the user.</string>
    <string name="PleaseWait">Please wait....</string>
    <string name="checkstatus">Check status</string>
    <string name="please_collect_the_below_amount_from_the_customer">Please collect the below amount from the customer</string>
    <string name="static_rupee">176</string>
    <string name="rs_symbol">\u20B9</string>
    <string name="dummy_amount">176</string>
    <string name="title_activity_please_rate">Please Rate</string>
    <string name="please_rate_the_customer">Please Rate the Customer.All fields are Mandatory</string>
    <string name="label_behaviour">Behaviour</string>
    <string name="label_way_of_apporach">Way of Approach</string>
    <string name="label_rate_rider">Rate Rider</string>
    <string name="label_cashreceived">Received</string>
    <string name="lbel_endtrip">Slide to End Trip</string>
    <string name="lbel_currentride">Current Ride</string>
    <string name="lbel_wait">Start wait</string>
    <string name="lbel_stopwait">Stop wait</string>
</resources>