<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/layout_arrived_trip_header"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/app_color">


        <RelativeLayout
            android:id="@+id/layout_arrived_trip_userinfo"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_centerHorizontal="true"
            android:background="@color/app_color">


            <com.cabily.cabilydriver.widgets.CustomTextView
                android:id="@+id/trip_arrived_userinfotextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/arrivedtrip_info_label"
                android:textColor="#ffffff"
                android:textSize="16sp" />

        </RelativeLayout>

        <com.cabily.cabilydriver.widgets.CustomTextView
            android:id="@+id/trip_arrived_usernameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text=""
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layouyt_user_address_details"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_arrived_trip_header"
        android:background="#ffffff">


        <RelativeLayout
            android:id="@+id/layout_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/user_phonecall"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/phonecall" />


            <View
                android:id="@+id/arrivedtrip_view"
                android:layout_width="2px"
                android:layout_height="80dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_toRightOf="@+id/user_phonecall"
                android:background="#b3b3b3" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/layout_user_details"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/layout_phone">


            <RelativeLayout
                android:id="@+id/layout_user_id_detail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:visibility="gone"

                >


                <com.cabily.cabilydriver.widgets.CustomTextView
                    android:id="@+id/trip_arrived_user_idTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="8dp"
                    android:text="@string/arrivedtrip_id_label"
                    android:textColor="#000000"
                    android:textSize="20sp"
                     android:textStyle="bold"/>


                <com.cabily.cabilydriver.widgets.CustomTextView
                    android:id="@+id/trip_arrived_user_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="4dp"
                    android:layout_toRightOf="@+id/trip_arrived_user_idTv"
                    android:text="789654"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="20sp" />

            </RelativeLayout>


            <com.cabily.cabilydriver.widgets.CustomTextView
                android:id="@+id/trip_arrived_user_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_user_id_detail"
                android:layout_marginLeft="15dp"
                android:text="bvhdfgbjhj g jgfnvj"
                android:textColor="#4e4e4e"
                android:textSize="13sp" />
        </RelativeLayout>


    </RelativeLayout>


    <fragment
        android:id="@+id/arrived_trip_view_map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/layouyt_user_address_details" />


    <RelativeLayout
        android:id="@+id/arrivd_Tripaccpt_alert_layout"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="#D9030303"
        android:visibility="gone">

        <com.cabily.cabilydriver.widgets.CustomTextView
            android:id="@+id/arrivd_Tripaccpt_alert_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:text="hbvsvbjhjsnvbjhnnb"
            android:textColor="#FCC900"
            android:textSize="13sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_arrivedbtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#80000000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="#00000000">


            <Button
                android:id="@+id/btn_arrived"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_weight="1"
                android:background="@color/app_color"
                android:text="@string/arrivedtrip_arrivedtriptv_label"
                android:textColor="#ffffff"
                android:textSize="15sp" />


            <Button
                android:id="@+id/arrived_Enable_voice_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#CC0000"
                android:textColor="#ffffff"
                android:text="Enable Voice" />


        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>
